examples/test/testpolicy3380.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy3380
  namespace: namespace282
spec:
  podSelector:
    matchLabels:
      key6: value45
      key15: value42
      key18: value11
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key31: value49
          key1: value41
      podSelector:
        matchLabels:
          key37: value17
          key8: value49
